# SPKL-BG-SpecklePY-LIB

./: .gitignore  Dockerfile  pyproject.toml  schema_generation.py
.github/workflows/: main.yml
bg_specklepy/: analysis_column_eccentricity.py
bg_specklepy/Geometry/: sphere.py
bg_specklepy/Operations/: columnOffsetEvaluation.py
bg_specklepy/SpeckleServer/: client.py
tests/: test_geometry_sphere.py  test_operations_column_offset_evaluation.py  test_speckleServer.py
